[project]
name = "wekeo_plumes_post_process"
version = "0.1.0"
description = ""
requires-python = ">= 3.10"
authors = [{name = "HYGEOS", email = "contact@hygeos.com"}]
dependencies = ["matplotlib", "numpy", "scipy", "xarray", "pandas", "cartopy", "opencv-python", "python-dotenv", "netcdf4"]

[project.optional-dependencies]
git = [
    # insert github dependencies
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {}}

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
wekeo_plumes_post_process = { path = ".", editable = true, extras = ["git"] }

[tool.pixi.tasks]
tests = "pytest tests/"


[tool.pixi.dependencies]
ipykernel = "*"
pytest = "*"
pytest-html = "*"
matplotlib-base = "*"
pytest-xdist = "*"
# opencv = "*"
# opencv-python = "*"
matplotlib = "*"
numpy = "*"
scipy = "*"
xarray = "*"
pandas = "*"
cartopy = "*"
netcdf4 = "*"
python-dotenv = "*"

[tool.pixi.environments]
default = { features = ['sys', 'sub', 'dev'], solve-group = "default" }

[tool.pixi.feature.sys.dependencies]
opencv = "*"

[tool.pixi.feature.dev.dependencies]

[tool.pixi.feature.sub.dependencies]
